--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,4 +53,10 @@
             android:layout_height="wrap_content"
             tools:text="1000"/>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/mapButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="show map"/>
 </LinearLayout>
