--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,12 @@
         android:layout_height="wrap_content"
         android:text="stop"/>
 
+    <Button
+        android:id="@+id/resetButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="reset"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
